# up-to-date-docs

./: .dockerignore  .env  .gitignore  Dockerfile  chroma.yml  crawler.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: crawl.py  mcp_server.py  public_pages.py  query.py
app/core/: db.py  vector.py
app/helpers/: playground.py
app/models/: page.py
app/services/: crawler_service.py  embedding_service.py
